objects/Strategy_Session_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>AFS_Candidate__c</fullName>
        <inlineHelpText>What client is a good candidate for.</inlineHelpText>
        <label>AFS Candidate</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defined Benefit Plan</fullName>
                </value>
                <value>
                    <fullName>IUL</fullName>
                </value>
                <value>
                    <fullName>Financial Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategy Session Questionnaires</relationshipLabel>
        <relationshipName>Strategy_Session_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Enities__c</fullName>
        <inlineHelpText>Response to &quot;Please list any additional business entities you need to establish based on your current asset protection concerns&quot;</inlineHelpText>
        <label>Additional Enities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age Range:</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Spouse__c</fullName>
        <label>Spouse DOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>DOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ages_of_Children__c</fullName>
        <label>Ages of Children</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_2nd_Expense__c</fullName>
        <label>Amount of 2nd Expense</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_3rd_Expense__c</fullName>
        <label>Amount of 3rd Expense</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Premium__c</fullName>
        <label>Annual Premium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_self_Employed__c</fullName>
        <label>Are you self-Employed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assets_that_could_create_a_Liability__c</fullName>
        <label>Assets that could create a Liability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blueprint_Notes__c</fullName>
        <inlineHelpText>Response to question &quot;Anything else we should know when putting together a Blueprint for you?&quot;</inlineHelpText>
        <label>Blueprint Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brokerage_Accounts__c</fullName>
        <label>Brokerage Accounts:  Value $</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Purpose_2__c</fullName>
        <label>Business Purpose 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Purpose_3__c</fullName>
        <label>Business Purpose 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Purpose_4__c</fullName>
        <label>Business Purpose 4</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Purpose__c</fullName>
        <label>Business Purpose:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checking_Accounts__c</fullName>
        <label>Checking Accounts:  Value $</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checking_Savings_Total_Value__c</fullName>
        <label>Checking &amp; Savings Total Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Spouse__c</fullName>
        <label>Citizenship:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Wages__c</fullName>
        <label>Client Wages</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Policy_Name_2__c</fullName>
        <label>Company Policy Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Policy_Name_3__c</fullName>
        <label>Company Policy Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <label>Consultant:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Referred_to_AFS__c</fullName>
        <inlineHelpText>Date we referred client to AFS</inlineHelpText>
        <label>Date Referred to AFS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Consult__c</fullName>
        <label>Date/Time of Consult</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Benefit__c</fullName>
        <label>Death Benefit</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Life_Insurance__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_Notes__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dividends__c</fullName>
        <inlineHelpText>Monthly dividend income</inlineHelpText>
        <label>Dividends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_you_have_Additional_income_sources__c</fullName>
        <label>Do you have Additional income sources</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_Long_Term_Care_Insurance_Ye__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you have Long Term Care Insurance? Ye</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_Living_Trust__c</fullName>
        <label>Do you have a Living Trust?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_a_will__c</fullName>
        <label>Do you have a will?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_disability_Insurance__c</fullName>
        <label>Do you have disability Insurance?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_long_term_care_insurance__c</fullName>
        <label>Do you have long-term care insurance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocParser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes when an SSQ was sent via DocParser</description>
        <label>DocParser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_Amount__c</fullName>
        <label>Education Amount</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email:</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_2_Tax_Status__c</fullName>
        <label>Entity 2 Tax Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_3_Tax_Status__c</fullName>
        <label>Entity 3 Tax Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name_2__c</fullName>
        <label>Entity Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name_3__c</fullName>
        <label>Entity Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Tax_Status__c</fullName>
        <label>Entity Tax Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type_2__c</fullName>
        <label>Entity Type 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type_3__c</fullName>
        <label>Entity Type  3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type_4__c</fullName>
        <label>Entity Type  4</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equity__c</fullName>
        <label>Equity $</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Value_of_Real_Estate_Holdings__c</fullName>
        <label>Estimated Value of Real Estate Holdings</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Business_Interest__c</fullName>
        <label>Existing Business Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fix_Flip_Wholesale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fix &amp; Flip / Wholesale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flip_Hold__c</fullName>
        <label>Flip/Hold</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals_Objectives__c</fullName>
        <inlineHelpText>Financial Goals the client is looking to focus on in the next 12 months.</inlineHelpText>
        <label>Financial Goals &amp; Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>College Tuition</fullName>
                </value>
                <value>
                    <fullName>Fund Brokerage Account</fullName>
                </value>
                <value>
                    <fullName>Investment Property</fullName>
                </value>
                <value>
                    <fullName>Marriage</fullName>
                </value>
                <value>
                    <fullName>New Home</fullName>
                </value>
                <value>
                    <fullName>Retirement Income</fullName>
                </value>
                <value>
                    <fullName>Second Home</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Value_of_Assets__c</fullName>
        <inlineHelpText>Total Gross Value of All Assets</inlineHelpText>
        <label>Gross Value of Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_yes_when_was_it_created_Trust__c</fullName>
        <label>If yes, when was it created?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_when_was_it_created__c</fullName>
        <label>If yes, when was it created?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <label>Insured</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Income__c</fullName>
        <inlineHelpText>Monthly interest income</inlineHelpText>
        <label>Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Investment_Focus__c</fullName>
        <label>Investment Focus</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Your_spouse_Self_Employed__c</fullName>
        <label>Is Your spouse Self-Employed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Tax_Advisor_Consult__c</fullName>
        <inlineHelpText>Date the last tax advisor communicated with client</inlineHelpText>
        <label>Last Tax Advisor Consult</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_Trust_Date__c</fullName>
        <description>Date for the Living Trust</description>
        <label>Living Trust  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Consultant__c</fullName>
        <label>Location:</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Term_Capital_Gains__c</fullName>
        <description>Long term capital gains income monthly</description>
        <label>Long Term Capital Gains</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_Spouse__c</fullName>
        <label>Mobile:</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Networth__c</fullName>
        <label>Net Worth</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Properties_Owned__c</fullName>
        <label>No of Properties Owned</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occupation_Wage_For_Client__c</fullName>
        <label>Occupation:  (For Client)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation_Wage_For_Spouse__c</fullName>
        <label>Occupation &amp; Wage: (For Spouse)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Expenses__c</fullName>
        <label>Other Expenses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Income_Sources__c</fullName>
        <inlineHelpText>Other Income Sources: (List source and annual amount.)</inlineHelpText>
        <label>Other Income Sources:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Liquid_Assets__c</fullName>
        <inlineHelpText>Other Liquid Assets: (Include asset value and description.)</inlineHelpText>
        <label>Other Liquid Assets:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owned__c</fullName>
        <label>% Owned</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Spouse__c</fullName>
        <label>Phone Number: Home:</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_2_Annual_Premium__c</fullName>
        <label>Policy 2 Annual Premium</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_2_Death_Benefit__c</fullName>
        <label>Policy 2 Death Benefit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_2_Description__c</fullName>
        <label>Policy 2 Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_2_who_is_insured__c</fullName>
        <label>Policy 2 who is insured ?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_3_Annual_Premium__c</fullName>
        <label>Policy 3 Annual Premium</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_3_Death_Benefit__c</fullName>
        <label>Policy 3 Death Benefit</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_3_Description__c</fullName>
        <label>Policy 3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_3_Who_is_Insured__c</fullName>
        <label>Policy 3 Who is Insured</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Gender__c</fullName>
        <label>Primary Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Residence_Equity__c</fullName>
        <label>Primary Residence: Equity$</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Residence_State__c</fullName>
        <label>Primary Residence: State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Residence_Value__c</fullName>
        <label>Primary Residence: Value $</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Advisor_Recommendations__c</fullName>
        <inlineHelpText>All professional advisor recommendations.</inlineHelpText>
        <label>Professional Advisor Recommendations</label>
        <length>80000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profits_active_business__c</fullName>
        <inlineHelpText>Profits from active businesses</inlineHelpText>
        <label>Profits (active business)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Value__c</fullName>
        <label>2nd Property Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_estate_held_in_entity_RA_or_JV__c</fullName>
        <label>Real estate held in entity, RA, or JV?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_to_AFS_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who has referred client to AFS</inlineHelpText>
        <label>Referred to AFS By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategy_Session_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental_Income__c</fullName>
        <inlineHelpText>Monthly Rental Income</inlineHelpText>
        <label>Rental Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retirement_Accounts__c</fullName>
        <label>Retirement Accounts: Value $</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Plan_Type__c</fullName>
        <description>Select all that apply</description>
        <label>Retirement Plan Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>401k</fullName>
                </value>
                <value>
                    <fullName>403b</fullName>
                </value>
                <value>
                    <fullName>401a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFR_Multi__c</fullName>
        <label>SFR/Multi</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saving_Accounts__c</fullName>
        <label>Saving Accounts:  Value $</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Term_Capital_Gains__c</fullName>
        <inlineHelpText>Short term capital gains monthly income</inlineHelpText>
        <label>Short Term Capital Gains</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouse_Gender__c</fullName>
        <label>Spouse Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Total_Annual_Income__c</fullName>
        <label>Spouse Total Annual Income</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_W_2_or_1099__c</fullName>
        <label>Spouse W-2 or 1099</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Wages__c</fullName>
        <description>Wages of Spouse</description>
        <label>Spouse Wages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_2__c</fullName>
        <label>State 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_3__c</fullName>
        <label>State 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_4__c</fullName>
        <label>State 4</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Business__c</fullName>
        <label>State:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States_Where_You_Plan_to_Invest__c</fullName>
        <label>States Where You Plan to Invest:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stock_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of InHouse Tax Advisor client is working with.</inlineHelpText>
        <label>Tax Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategy_Session_Questionnaires1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Liens_Deeds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Liens / Deeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Income__c</fullName>
        <label>Total Annual Income</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Income__c</fullName>
        <label>Total Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Wages__c</fullName>
        <inlineHelpText>Total Monthly Wages</inlineHelpText>
        <label>Total Wages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_All_Debts_Liabilities__c</fullName>
        <inlineHelpText>Total of All liabilities (debt)</inlineHelpText>
        <label>Total of All Debts(Liabilities)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_IRA_401K_403b_401a__c</fullName>
        <label>Type: (IRA, 401K, 403b, 401a)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value $</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wages__c</fullName>
        <description>Annual Income of Client</description>
        <inlineHelpText>Client&apos;s Annual income</inlineHelpText>
        <label>Wages</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Will_Date__c</fullName>
        <description>Date the Will was last updated</description>
        <label>Will Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X10th_Property_Equity__c</fullName>
        <label>10th Property Equity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10th_Property_Owned__c</fullName>
        <label>10th Property % Owned</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10th_Property_State__c</fullName>
        <label>10th Property State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10th_Property_Value__c</fullName>
        <label>10th Property Value</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10th_Property__c</fullName>
        <label>10th Property</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10th_Property_ownership_held_by__c</fullName>
        <label>10th Property ownership held by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11th_Property_Equity__c</fullName>
        <label>11th Property Equity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11th_Property_Owned__c</fullName>
        <label>11th Property % Owned</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11th_Property_State__c</fullName>
        <label>11th Property State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11th_Property_Value__c</fullName>
        <label>11th Property Value</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11th_Property__c</fullName>
        <label>11th Property</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11th_Property_ownership_held_by__c</fullName>
        <label>11th Property ownership held by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12_Property_Equity__c</fullName>
        <label>12 Property Equity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12_Property_Owned__c</fullName>
        <label>12 Property % Owned</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12_Property_ownership_held_by__c</fullName>
        <label>12 Property ownership held by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12th_Property_State__c</fullName>
        <label>12th Property State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12th_Property_Value__c</fullName>
        <label>12th Property Value</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12th_Property__c</fullName>
        <label>12th Property</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Date_of_Purchase__c</fullName>
        <label>2nd Date of Purchase</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Education_Amount__c</fullName>
        <label>2nd Education Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Other_Expense__c</fullName>
        <label>2nd Other Expense</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Property_Equity__c</fullName>
        <label>2nd Property Equity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Property_Owned__c</fullName>
        <label>2nd Property % Owned</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Property_State__c</fullName>
        <label>2nd Property State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Property__c</fullName>
        <label>2nd Property</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Property_ownership_held_by__c</fullName>
        <label>2nd Property ownership held by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Residence_Equity__c</fullName>
        <label>2nd Residence: Equity $</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Residence_State__c</fullName>
        <label>2nd Residence: State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Residence_Value__c</fullName>
        <label>2nd Residence: Value $</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_of_Classes_Purchased__c</fullName>
        <label>2nd # of Classes Purchased</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_of_Classes_attended__c</fullName>
        <label>2nd # of Classes attended</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Education_Amount__c</fullName>
        <label>3rd Education Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Property_Equity__c</fullName>
        <label>3rd Property Equity</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Property_Owned__c</fullName>
        <label>3rd Property % Owned</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Property_State__c</fullName>
        <label>3rd Property State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>